# sweetpapers

./: Cargo.toml  README.md  config.example.jsonc
docs/: protocol.md
src/: awww.rs  client.rs  config.rs  daemon.rs  image_ext.rs  main.rs  orientation.rs  pack.rs  paths.rs  proto.rs  thumbnail.rs
