[package]
name = "sweetpapers"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Per-monitor wallpaper rotator daemon for Wayland, drives awww via its CLI."
license-file = "LICENSE"
repository = "https://github.com/Nynxz/sweetpapers"
readme = "README.md"
keywords = ["wayland", "wallpaper", "awww", "hyprland", "daemon"]
categories = ["command-line-utilities", "multimedia::images"]

[[bin]]
name = "sweetpapers"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
imagesize = "0.14"
dirs = "6"
signal-hook = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
